Enable running Californium JUnit tests as Github Action
Signed-off-by: Rikard Höglund <rikard.hoglund@ri.se>