@@ -19,16 +19,16 @@ package org.eclipse.californium.oscore.group;
 import java.util.HashMap;
 import java.util.Map.Entry;
 
-import javax.xml.bind.DatatypeConverter;
+
 
 import org.eclipse.californium.cose.AlgorithmID;
 import org.eclipse.californium.cose.CoseException;
 import org.eclipse.californium.cose.OneKey;
+import org.eclipse.californium.elements.util.Base64;
 import org.eclipse.californium.elements.util.Bytes;
 import org.eclipse.californium.oscore.ByteId;
 import org.eclipse.californium.oscore.OSCoreCtx;
 import org.eclipse.californium.oscore.OSException;
-import org.junit.Assert;
 
 /**
  * Class implementing a Group OSCORE sender context.
@@ -218,14 +218,14 @@ public class GroupSenderCtx extends OSCoreCtx {
 
 		// Print base64 encoded version with both public & private keys
 		byte[] keyObjectBytes = myKey.EncodeToBytes();
-		String base64_encoded = DatatypeConverter.printBase64Binary(keyObjectBytes);
+		String base64_encoded = Base64.encodeBytes(keyObjectBytes);
 		System.out.println("Public & Private: " + base64_encoded);
 
 		// Print base64 encoded version with only public keys
 		OneKey publicKey = myKey.PublicKey();
 
 		keyObjectBytes = publicKey.EncodeToBytes();
-		base64_encoded = DatatypeConverter.printBase64Binary(keyObjectBytes);
+		base64_encoded = Base64.encodeBytes(keyObjectBytes);
 		System.out.println("Public only: " + base64_encoded);
 
 	}
@@ -239,7 +239,7 @@ public class GroupSenderCtx extends OSCoreCtx {
 		System.out.println("Bad call to getRecipientReplaySize");
 		StackTraceElement[] stackTraceElements = Thread.currentThread().getStackTrace();
 		System.err.println("Bad call to getRecipientReplaySize on GroupSenderCtx" + stackTraceElements[2].toString());
-		Assert.fail();
+		System.exit(0);
 		return recipient_replay_window_size;
 	}
 
@@ -251,7 +251,7 @@ public class GroupSenderCtx extends OSCoreCtx {
 		System.out.println("Bad call to getRecipientReplayWindow");
 		StackTraceElement[] stackTraceElements = Thread.currentThread().getStackTrace();
 		System.err.println("Bad call to getRecipientReplayWindow on GroupSenderCtx" + stackTraceElements[2].toString());
-		Assert.fail();
+		System.exit(0);
 		return recipient_replay_window;
 	}
 
@@ -259,8 +259,8 @@ public class GroupSenderCtx extends OSCoreCtx {
 	public void setRecipientKey(byte[] recipientKey) {
 		StackTraceElement[] stackTraceElements = Thread.currentThread().getStackTrace();
 		System.err.println("Bad call to setRecipientKey on GroupSenderCtx" + stackTraceElements[2].toString());
-		Assert.fail();
-		Assert.fail();
+		System.exit(0);
+		System.exit(0);
 		super.setRecipientKey(recipientKey);
 	}
 
@@ -270,21 +270,21 @@ public class GroupSenderCtx extends OSCoreCtx {
 	public synchronized void setReceiverSeq(int seq) {
 		StackTraceElement[] stackTraceElements = Thread.currentThread().getStackTrace();
 		System.err.println("Bad call to setReceiverSeq on GroupSenderCtx" + stackTraceElements[2].toString());
-		Assert.fail();
+		System.exit(0);
 		super.setReceiverSeq(seq);
 	}
 
 	public int rollbackRecipientSeq() {
 		StackTraceElement[] stackTraceElements = Thread.currentThread().getStackTrace();
 		System.err.println("Bad call to rollbackRecipientSeq on GroupSenderCtx" + stackTraceElements[2].toString());
-		Assert.fail();
+		System.exit(0);
 		return super.rollbackRecipientSeq();
 	}
 
 	public int rollbackRecipientReplay() {
 		StackTraceElement[] stackTraceElements = Thread.currentThread().getStackTrace();
 		System.err.println("Bad call to rollbackRecipientReplay on GroupSenderCtx" + stackTraceElements[2].toString());
-		Assert.fail();
+		System.exit(0);
 		return super.rollbackRecipientReplay();
 	}
 
@@ -298,7 +298,7 @@ public class GroupSenderCtx extends OSCoreCtx {
 		System.err.println("Bad call to getRecipientId on GroupSenderCtx. " + stackTraceElements[2].toString());
 		// System.err.println("Bad call to getRecipientId on GroupSenderCtx. " +
 		// stackTraceElements[3].toString());
-		Assert.fail();
+		System.exit(0);
 		return super.getRecipientId();
 	}
 
@@ -308,7 +308,7 @@ public class GroupSenderCtx extends OSCoreCtx {
 	public synchronized int getReceiverSeq() {
 		StackTraceElement[] stackTraceElements = Thread.currentThread().getStackTrace();
 		System.err.println("Bad call to getReceiverSeq on GroupSenderCtx" + stackTraceElements[2].toString());
-		Assert.fail();
+		System.exit(0);
 		return super.getReceiverSeq();
 	}
 
@@ -318,7 +318,7 @@ public class GroupSenderCtx extends OSCoreCtx {
 	public byte[] getRecipientKey() {
 		StackTraceElement[] stackTraceElements = Thread.currentThread().getStackTrace();
 		System.err.println("Bad call to getRecipientKey on GroupSenderCtx" + stackTraceElements[2].toString());
-		Assert.fail();
+		System.exit(0);
 		return super.getRecipientKey();
 	}
 
