@@ -21,10 +21,11 @@ import static org.junit.Assert.assertArrayEquals;
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertTrue;
 
+import java.io.IOException;
 import java.util.Arrays;
 import java.util.Random;
 
-import javax.xml.bind.DatatypeConverter;
+
 
 import org.eclipse.californium.core.coap.Message;
 import org.eclipse.californium.core.coap.Request;
@@ -36,6 +37,7 @@ import org.eclipse.californium.cose.AlgorithmID;
 import org.eclipse.californium.cose.CoseException;
 import org.eclipse.californium.cose.OneKey;
 import org.eclipse.californium.elements.rule.TestNameLoggerRule;
+import org.eclipse.californium.elements.util.Base64;
 import org.eclipse.californium.oscore.HashMapCtxDB;
 import org.eclipse.californium.oscore.OSCoreCoapStackFactory;
 import org.eclipse.californium.oscore.OSException;
@@ -77,7 +79,7 @@ public class GroupEncryptorTest {
 
 	// Key for the GM
 	private static String gmPublicKeyString = "pQF4GmNvYXBzOi8vbXlzaXRlLmV4YW1wbGUuY29tAmxncm91cG1hbmFnZXIDeBpjb2FwczovL2RvbWFpbi5leGFtcGxlLm9yZwQaq5sVTwihAaQDJwEBIAYhWCDN4+/TvD+ZycnuIQQVxsulUGG1BG6WO4pYyRQ6YRZkcg==";
-	private static byte[] gmPublicKey = DatatypeConverter.parseBase64Binary(gmPublicKeyString);
+	private static byte[] gmPublicKey;
 
 	// Keys for client and server (ECDSA full private and public keys)
 	private static String clientKeyString = "pgECI1gg2qPzgLjNqAaJWnjh9trtVjX2Gp2mbzyAQLSJt9LD2j8iWCDe8qCLkQ59ZOIwmFVk2oGtfoz4epMe/Fg2nvKQwkQ+XiFYIKb0PXRXX/6hU45EpcXUAQPufU03fkYA+W6gPoiZ+d0YIAEDJg==";
@@ -89,8 +91,9 @@ public class GroupEncryptorTest {
 	private String uri;
 
 	@Before
-	public void init() {
+	public void init() throws IOException {
 		EndpointManager.clear();
+		gmPublicKey = Base64.decode(gmPublicKeyString);
 	}
 
 	// Use the OSCORE stack factory
@@ -103,10 +106,11 @@ public class GroupEncryptorTest {
 	/**
 	 * @throws OSException if encryption fails
 	 * @throws CoseException on test failure
+	 * @throws IOException on test failure
 	 */
 	@Test
 	@Ignore // TODO: Recalculate
-	public void testRequestEncryptorGroupMode() throws OSException, CoseException {
+	public void testRequestEncryptorGroupMode() throws OSException, CoseException, IOException {
 		// Set up OSCORE context
 		byte[] sid = new byte[] { 0x00 };
 		int seq = 20;
@@ -115,7 +119,7 @@ public class GroupEncryptorTest {
 		GroupCtx commonCtx = new GroupCtx(master_secret, master_salt, alg, kdf, context_id, algCountersign,
 				gmPublicKey);
 		OneKey clientFullKey = new OneKey(
-				CBORObject.DecodeFromBytes(DatatypeConverter.parseBase64Binary(clientKeyString)));
+				CBORObject.DecodeFromBytes(Base64.decode(clientKeyString)));
 		commonCtx.addSenderCtx(sid, clientFullKey);
 
 		commonCtx.senderCtx.setSenderSeq(seq);
@@ -182,10 +186,11 @@ public class GroupEncryptorTest {
 	 *
 	 * @throws OSException if encryption fails
 	 * @throws CoseException on test failure
+	 * @throws IOException on test failure
 	 */
 	@Test
 	@Ignore // TODO: Recalculate
-	public void testRequestEncryptorPairwiseMode() throws OSException, CoseException {
+	public void testRequestEncryptorPairwiseMode() throws OSException, CoseException, IOException {
 		// Set up OSCORE context
 		byte[] sid = new byte[] { 0x00 };
 		byte[] rid = new byte[] { 0x01 };
@@ -195,14 +200,14 @@ public class GroupEncryptorTest {
 		GroupCtx commonCtx = new GroupCtx(master_secret, master_salt, alg, kdf, context_id, algCountersign,
 				gmPublicKey);
 		OneKey clientFullKey = new OneKey(
-				CBORObject.DecodeFromBytes(DatatypeConverter.parseBase64Binary(clientKeyString)));
+				CBORObject.DecodeFromBytes(Base64.decode(clientKeyString)));
 		commonCtx.addSenderCtx(sid, clientFullKey);
 
 		commonCtx.senderCtx.setSenderSeq(seq);
 
 		// Create server context
 		OneKey serverPublicKey = new OneKey(
-				CBORObject.DecodeFromBytes(DatatypeConverter.parseBase64Binary(serverKeyString))).PublicKey();
+				CBORObject.DecodeFromBytes(Base64.decode(serverKeyString))).PublicKey();
 		commonCtx.addRecipientCtx(rid, REPLAY_WINDOW, serverPublicKey);
 
 		// Create request message from raw byte array
@@ -260,7 +265,7 @@ public class GroupEncryptorTest {
 
 	@Test
 	@Ignore // TODO: Recalculate
-	public void testResponseEncryptorGroupMode() throws OSException, CoseException {
+	public void testResponseEncryptorGroupMode() throws OSException, CoseException, IOException {
 		// Set up OSCORE context
 		byte[] master_salt = new byte[] { (byte) 0x9e, 0x7c, (byte) 0xa9, 0x22, 0x23, 0x78, 0x63, 0x40 };
 		byte[] sid = new byte[] { 0x11 };
@@ -270,7 +275,7 @@ public class GroupEncryptorTest {
 		GroupCtx commonCtx = new GroupCtx(master_secret, master_salt, alg, kdf, context_id, algCountersign,
 				gmPublicKey);
 		OneKey serverFullKey = new OneKey(
-				CBORObject.DecodeFromBytes(DatatypeConverter.parseBase64Binary(serverKeyString)));
+				CBORObject.DecodeFromBytes(Base64.decode(serverKeyString)));
 		commonCtx.addSenderCtx(sid, serverFullKey);
 
 		GroupSenderCtx senderCtx = commonCtx.senderCtx;
@@ -336,7 +341,7 @@ public class GroupEncryptorTest {
 
 	@Test
 	@Ignore // TODO: Recalculate
-	public void testResponseEncryptorPairwiseMode() throws OSException, CoseException {
+	public void testResponseEncryptorPairwiseMode() throws OSException, CoseException, IOException {
 		// Set up OSCORE context
 		// test vector OSCORE draft Appendix C.1.2
 		byte[] master_salt = new byte[] { (byte) 0x9e, 0x7c, (byte) 0xa9, 0x22, 0x23, 0x78, 0x63, 0x40 };
@@ -348,7 +353,7 @@ public class GroupEncryptorTest {
 		GroupCtx commonCtx = new GroupCtx(master_secret, master_salt, alg, kdf, context_id, algCountersign,
 				gmPublicKey);
 		OneKey serverFullKey = new OneKey(
-				CBORObject.DecodeFromBytes(DatatypeConverter.parseBase64Binary(serverKeyString)));
+				CBORObject.DecodeFromBytes(Base64.decode(serverKeyString)));
 		commonCtx.addSenderCtx(sid, serverFullKey);
 
 		GroupSenderCtx senderCtx = commonCtx.senderCtx;
@@ -358,7 +363,7 @@ public class GroupEncryptorTest {
 
 		// Create client context
 		OneKey clientPublicKey = new OneKey(
-				CBORObject.DecodeFromBytes(DatatypeConverter.parseBase64Binary(clientKeyString))).PublicKey();
+				CBORObject.DecodeFromBytes(Base64.decode(clientKeyString))).PublicKey();
 		commonCtx.addRecipientCtx(rid, REPLAY_WINDOW, clientPublicKey);
 
 		// Create response message from raw byte array
